--- a/main.html
+++ b/main.html
@@ -1,121 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ID Card Generator</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.11/interact.min.js"></script>
     <style>
-      body {
-        -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
-        user-select: none; /* Standard syntax */
-
-        background-image: url("./India Election 2019.jpeg");
-        background-size: cover;
-        background-position: center;
-        /* height: 100vh; */
-        background-repeat: no-repeat;
-      }
-      h1 {
-        color: #007bff;
-      }
-
-      .card-body {
-        padding: 2rem;
-        background-color: #ffffff;
-        background-image: url(./bottom_background.jpg);
-        background-position: center;
-        background-size: contain;
-        /* min-height: 400px; */
-        background-repeat: no-repeat;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 0%;
-      }
-      .img-fluid {
-        max-width: 100px;
-        height: auto;
-      }
-      p {
-        margin: 0.5rem 0;
-      }
-      span {
-        font-weight: bold;
-      }
-      .hidden {
-        display: none;
-      }
-      .head_img {
-        width: 100%;
-      }
-      @media print {
-        .no-print {
-          display: none;
+        body {
+            user-select: none;
+            background-image: url("./India Election 2019.jpeg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
-      }
-
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-      }
-      .nav_item img {
-        width: 80px;
-        height: 80px;
-      }
-      footer {
-        margin-top: 16rem;
-      }
+        h1 {
+            color: #007bff;
+        }
+        .card-body {
+            padding: 2rem;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 0%;
+            position: relative; /* Added for positioning child elements */
+        }
+        .draggable {
+            cursor: move;
+            position: absolute; /* Allow free positioning */
+        }
+        .hidden {
+            display: none;
+        }
+        @media print {
+            .no-print {
+                display: none;
+            }
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <nav class="navbar bg-danger">
-        <div class="container-fluid">
-          <div class="nav_item"><img src="./mp_logo.jpg" alt="" /></div>
-          <div class="nav_item">
-            <h1 class="text-warning text-center">Maharashtra Election 2024</h1>
-          </div>
-          <div class="nav_item"><img src="./elction_log.png" alt="" /></div>
-        </div>
-      </nav>
+        <nav class="navbar bg-danger">
+            <div class="container-fluid">
+                <h1 class="text-warning text-center">Maharashtra Election 2024</h1>
+            </div>
+        </nav>
     </header>
     <main>
-      <div class="container mt-5">
-        <h1 class="text-center mb-4">ID Card Generator</h1>
-        <input
-          type="file"
-          id="excelFile"
-          accept=".xlsx"
-          class="form-control mb-4"
-        />
-        <button onclick="generateIdCards()" class="btn btn-primary mb-4">
-          Generate ID Cards
-        </button>
-        <div id="cardsContainer" class="row justify-content-center"></div>
-        <button onclick="printCards()" class="btn btn-info mt-4">
-          Print Cards
-        </button>
-      </div>
+        <div class="container mt-5">
+            <h1 class="text-center mb-4">ID Card Generator</h1>
+            <input type="file" id="excelFile" accept=".xlsx" class="form-control mb-4" />
+            <button onclick="generateIdCards()" class="btn btn-primary mb-4">Generate ID Cards</button>
+            <div id="cardsContainer" class="row justify-content-center"></div>
+            <button onclick="printCards()" class="btn btn-info mt-4">Print Cards</button>
+        </div>
     </main>
     <footer>
-      <nav class="navbar bg-secondary">
-        <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1"
-            >©Copyright Digispect Technologies 2024
-          </span>
-        </div>
-      </nav>
+        <nav class="navbar bg-secondary">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 h1">©Copyright Digispect Technologies 2024</span>
+            </div>
+        </nav>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="./script.js"></script>
-  </body>
+    <script>
+        function generateIdCards() {
+            const file = document.getElementById('excelFile').files[0];
+            if (!file) {
+                alert('Please select an Excel file');
+                return;
+            }
+
+            const reader = new FileReader();
+            reader.onload = function (event) {
+                const data = new Uint8Array(event.target.result);
+                const workbook = XLSX.read(data, { type: 'array' });
+                const sheet = workbook.Sheets[workbook.SheetNames[0]];
+                const jsonData = XLSX.utils.sheet_to_json(sheet);
+
+                const container = document.getElementById('cardsContainer');
+                container.innerHTML = '';
+
+                jsonData.forEach((row, index) => {
+                    const card = document.createElement('div');
+                    card.className = 'col-md-8 mb-4';
+                    card.innerHTML = `
+                        <div class="card border-black border-3">
+                            <div class="card-body">
+                                <div class="draggable" style="top: 10px; left: 10px;">अनु क्र: <span>${row['sr.no.']}</span></div>
+                                <div class="draggable" style="top: 50 px; left: 10px;">नाव: <span>${row['name']}</span></div>
+                                <div class="draggable" style="top: 90px; left: 10px;">पोलीस स्टेशन: <span>${row['police station']}</span></div>
+                                <div class="draggable" style="top: 130px; left: 10px;">मो. नंबर: <span>${row['mobile number']}</span></div>
+                                <div class="draggable" style="top: 170px; left: 10px;">मतदान केंद्र: <span>${row['voting booth']}</span></div>
+                                <div class="draggable" style="top: 210px; left: 10px;">बंदोबस्ताचे ठिकाण: <span>${row['place']}</span></div>
+                                <div class="draggable" style="top: 250px; left: 10px;">दिनांक: <span>09/07/2024</span></div>
+                            </div>
+                        </div>`;
+                    container.appendChild(card);
+
+                    // Make the labels draggable
+                    interact('.draggable')
+                        .draggable({
+                            listeners: {
+                                move(event) {
+                                    const target = event.target;
+                                    const x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx;
+                                    const y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy;
+
+                                    // Translate the element
+                                    target.style.transform = `translate(${x}px, ${y}px)`;
+
+                                    // Update the position attributes
+                                    target.setAttribute('data-x', x);
+                                    target.setAttribute('data-y', y);
+                                }
+                            }
+                        });
+                });
+            };
+            reader.readAsArrayBuffer(file);
+        }
+
+        function printCards() {
+            const cards = document.querySelectorAll('.card');
+            const zip = new JSZip();
+            const promises = [];
+
+            cards.forEach((card, index) => {
+                promises.push(new Promise((resolve) => {
+                    html2canvas(card).then(canvas => {
+                        canvas.toBlob(blob => {
+                            zip.file(`id_card_${index + 1}.png`, blob);
+                            resolve();
+                        });
+                    });
+                }));
+            });
+
+            Promise.all(promises).then(() => {
+                zip.generateAsync({ type: 'blob' }).then(content => {
+                    saveAs(content, 'id_cards.zip');
+                });
+            });
+        }
+    </script>
+</body>
 </html>
