--- a/main.html
+++ b/main.html
@@ -98,8 +98,7 @@
                 container.innerHTML = '';
 
                 const row = jsonData[0]; // Use the first row for the single card
-                const card ```html
-                = document.createElement('div');
+                const card = document.createElement('div');
                 card.className = 'col-md-8 mb-4';
                 card.innerHTML = `
                     <div class="card border-black border-3">
@@ -177,7 +176,6 @@
                 });
             });
         }
-    ```html
     </script>
 </body>
 </html>
